# downbrust

./: .gitignore  CMakeLists.txt
input/: ConfigData 说明.txt  ConfigData.txt  SetPlaneSpeed 说明.txt  SetPlaneSpeed.txt
matlabRef/: AtmosTurb09.m  AtmosTurb10.m  checkoutput.m  windsimtest.m  windsimtest10.m
output/: PlaneSpeedoutput.txt
report/: 20220924-卫圆-2022下半年第5周-微下击暴流建模-001.docx
src/: EigenGnrlFcn.cpp  EigenGnrlFcn.h  EigenInc.h  GeneralFuncs.cpp  GeneralFuncs.h  GlobalGalerkin.cpp  GlobalGalerkin.h  MathDef.h  MathInc.h  Table.cpp  Table.h  UnitTransfer.h  downbrust.cpp  downbrust.h  main.cpp
src/Eigen/src/Core/: GlobalFunctions.h
